Added extra file attribute

--- a/.github/workflows/release-please-nodejs.yaml
+++ b/.github/workflows/release-please-nodejs.yaml
@@ -17,3 +17,5 @@ jobs:
         with:
           release-type: node
           package-name: test-image/package.json
+          extra-files: |
+            test-image/package.json
