--- a/.github/workflows/release-please-nodejs.yaml
+++ b/.github/workflows/release-please-nodejs.yaml
@@ -13,7 +13,7 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: google-github-actions/release-please-action@v3
+      - uses: google-github-actions/release-please-action@1ddb669c677d585663a83fc535edc428954c4aeb
         with:
           release-type: node
           
