--- a/.github/workflows/release-please-nodejs.yaml
+++ b/.github/workflows/release-please-nodejs.yaml
@@ -15,6 +15,6 @@ jobs:
     steps:
       - uses: google-github-actions/release-please-action@1ddb669c677d585663a83fc535edc428954c4aeb
         with:
-          token: $ {{ secrets.GITHUB_TOKEN }}
+          token: secrets.GITHUB_TOKEN
           release-type: node
           
